# docs

./: .gitignore  404.html  AGENTS.md  CLAUDE.md  Makefile  OWNERS.md  README.md  VALE_FIXES.md  _config.yml  community.html  config.yaml  hugo_stats.json  index.html  index2.html  netlify.toml  netlify_build.sh  package-lock.json  package.json  postcss.config.js  preprocess.js
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  content.md  new_release.md  website.md
.github/workflows/: check_freshness.yml  gh-pages.yaml  hugo.yml  link-checker.yml  main.yml  vale.yml  weekly-link-checker.yml
_data/: versions.json
_includes/: favicon.html  footer.html  google-analytics.html  header.html  mkhash.inc  values.inc
_layouts/: default.html  docs.html
_scss/: gridlex-classes.scss  gridlex.min.scss  minima.scss  normalize.scss  vars.scss
content/: _index.md  community.md  master
content/cli/: _index.md  command-reference.md
content/concepts/: composition.md  managed-resources.md  providers.md
content/contribute/: _index.md  code-style-guide.md  contribute.md  features.md  infrastructure.md  vale.md  writing-style-guide.md
content/docs/: _index.md
content/getting-started/: _index.md  introduction.md  provider-aws-part-2.md  provider-aws-part-3.md  provider-aws.md  (+5 more)
css/: 404.scss  docs.scss  index.scss  main.scss
docs/: latest.html
js/: anchor.js  slack-popup.js
scripts/: discover-community-extensions.sh
utils/: api-generator.py
utils/scripts/api-generator/: README.md  api-generator.py  pyproject.toml
(+2213 files in other folders)
